# drf-api-music-catalog

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
catalog_pr/: .env.example  manage.py  pytest.ini
catalog_pr/catalog_app/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
catalog_pr/catalog_app/migrations/: 0001_initial.py
catalog_pr/catalog_pr/: asgi.py  settings.py  urls.py  wsgi.py
